--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 /*******************************************/
 
 html{    
-     height:100%; 
+     height:100vh; 
      padding-top: 10px;
      background-image: linear-gradient(345deg, #ffffd0 0, #f9ffd5 8.33%, #e6ffd9 16.67%, #d2ffdc 25%, #bfffdc 33.33%, #adffda 41.67%, #9df2d5 50%, #90e1ce 58.33%, #87d1c7 66.67%, #81c5c1 75%, #7dbabc 83.33%, #7ab2b9 91.67%, #7aadb7 100%);
   
@@ -32,9 +32,16 @@ main {
      display: flex;
      flex-direction: column;
      align-items: center;
+     justify-content: center;
+     /* font-size: 120%; */
+     height: 30vh;
  
 }
 
+.shapeContainer{
+     width: 100vw;
+     height: 70vh;
+}
 #shape {
      height: 200px;
      width: 200px;
@@ -46,7 +53,7 @@ main {
  
   }
  
-  #bold { 
+  .bold { 
  
      font-weight: bold;
  
@@ -55,6 +62,7 @@ main {
   #buttonClass {
        display: flex;
   }
+
  .button {
       border-radius: 5px;
       padding: 4px;
